--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -13,7 +13,7 @@
     "classnames": "^2.5.1",
     "framer-motion": "^12.7.3",
     "lucide-react": "^0.488.0",
-    "next": "15.2.4",
+    "next": "^15.5.12",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
